feat✨: 移除 ESLint 配置并更新项目文档
- 删除 eslint.config.js 文件，移除 ESLint 相关配置
- 更新 index.html 文件，添加项目说明和启动命令
- 修改 package.json，调整 lint 和 test 脚本
- 更新文档，添加项目首页和组件介绍
- 新增 Card 组件及其样式和类型定义
- 更新测试文件，简化渲染逻辑

--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-<p>Hello World</p>
+<!-- 这是一个组件库项目，请使用以下命令启动文档服务器：
+     pnpm docs:dev
+     
+     或者运行测试：
+     pnpm test
+-->
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Pro Components Vue</title>
+</head>
+<body>
+  <h1>Pro Components Vue</h1>
+  <p>这是一个 Vue 3 组件库项目。</p>
+  <p>请运行 <code>pnpm docs:dev</code> 来启动文档服务器查看组件。</p>
+</body>
+</html>
