--- a/index.html
+++ b/index.html
@@ -1,17 +1,12 @@
-<!-- 这是一个组件库项目，请使用以下命令启动文档服务器：
-     pnpm docs:dev
-     
-     或者运行测试：
-     pnpm test
--->
 <!DOCTYPE html>
-<html>
+<html lang="zh-CN">
 <head>
-  <title>Pro Components Vue</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Pro Components Vue - Loading组件调试</title>
 </head>
 <body>
-  <h1>Pro Components Vue</h1>
-  <p>这是一个 Vue 3 组件库项目。</p>
-  <p>请运行 <code>pnpm docs:dev</code> 来启动文档服务器查看组件。</p>
+  <div id="app"></div>
+  <script type="module" src="/src/main.ts"></script>
 </body>
 </html>
